# controlled-safe-transfers

./: .gitignore  Cargo.toml  README.md
controlled-transfer-contract/: Cargo.toml
controlled-transfer-contract/src/: interface.rs  lib.rs
near-workspaces-integration-test/: Cargo.toml
near-workspaces-integration-test/src/: main.rs  nep141.rs
scripts/: build.sh  test.sh
scripts/mainnet/: add-valid-destination.sh  controlled-transfer-mpdao.sh  deploy_init.sh  get-info.sh  mainnet-set-vars.sh  redeploy_only.sh  set-valid-destinations.sh
scripts/testnet/: deploy_init.sh  redeploy_only.sh  set-vars.sh
scripts/testnet-dao7/: deploy_init.sh  get-info.sh  set-valid-destinations.sh  set-vars.sh
test-nep141-token/: Cargo.toml
