[package]
name = "controlled-transfer-contract"
version = "1.0.0"
edition = "2021"
authors = ["metapool.app <hello@metapool.app>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "~5"
near-contract-standards = "~5"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
