[package]
name = "test-nep141-token"
version = "0.0.1"
edition = "2021"
authors = ["metapool.app <hello@metapoool.app>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "~5"
near-contract-standards = "~5"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
